--- a/Williams_Shannon_Homework01/index.html
+++ b/Williams_Shannon_Homework01/index.html
@@ -2,12 +2,41 @@
 <html>
 <head>
     <title>HTML5 Drawing</title>
+    <style type="text/css">
+        #canvas01, #canvas02, #canvas03, #canvas04, #canvas05, #canvas06, #canvas07 {
+            border:solid 2px purple;
+        }
+    </style>
+    <script src="includes/modernizr.js"></script>
 </head>
 <body>
     <div id="container">
         <h1>HTML5 Canvas Drawing</h1>
     </div>
 
+    <canvas id="canvas01" width="200" height="200">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
+    <canvas id="canvas02" width="200" height="200">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
+    <canvas id="canvas03" width="200" height="200">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
+    <canvas id="canvas04" width="200" height="200">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
+    <canvas id="canvas05" width="200" height="200">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
+    <canvas id="canvas06" width="300" height="300">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
+    <canvas id="canvas07" width="200" height="200">
+        Sorry!  Your browser does not support Canvas.
+    </canvas>
 
+        <img id="img01" src="image/logo.png" width="350" height="150" style="display:none;">
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
