turned in homework

--- a/Williams_Shannon_Homework01/index.html
+++ b/Williams_Shannon_Homework01/index.html
@@ -36,7 +36,7 @@
         Sorry!  Your browser does not support Canvas.
     </canvas>
 
-        <img id="img01" src="image/logo.png" width="350" height="150" style="display:none;">
+        <img id="img01" src="image/logo.png" width="350" height="150" >
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
