--- a/Williams_Shannon_project-WIA/index.html
+++ b/Williams_Shannon_project-WIA/index.html
@@ -2,8 +2,10 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>WIA - Project - August 2015</title>
-    <style rel="stylesheet" type="text/css" src="css/style.css"></style>
+    <title>WIA - Project - November 2015</title>
+    <script src="includes/jquery-1.10.2.min.js"></script>
+    <script src="includes/lightbox-2.6.min.js"></script>
+    <link href="css/lightbox.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -12,11 +14,27 @@
         <nav>
             <ul>
                 <li><a href="map.html" />Map</li>
-                <li><a href="images/DarbySwimming09.JPG" />Images</li>
-                <li><a href="services.html" />Services</li>
+                <li><a href="breeds.html" />Breeds</li>
                 <li><a href="contact.html" />Contact</li>
             </ul>
         </nav>
+
+
+
+
+        <a href="images/DarbySwimming09.jpg" data-lightbox="group1" title="Darby">
+            <img src="images/DarbySwimming09-sml.jpg" alt="Darby" width="170" height="150">
+        </a>
+        <a href="images/Angus.jpg" data-lightbox="group1" title="Angus">
+            <img src="images/Angus-small.jpg" alt="Angus" width="170" height="150">
+        </a>
+        <a href="images/Nessie.jpg" data-lightbox="group1" title="Nessie">
+            <img src="images/Nessie-small.jpg" alt="Nessie" width="170" height="150">
+        </a>
+        <a href="images/Thistle.jpg" data-lightbox="group1" title="Thistle">
+            <img src="images/Thistle-small.jpg" alt="Thistle" width="170" height="150">
+        </a>
+
 
     </div>
 
