--- a/Williams_Shannon_project-WIA/index.html
+++ b/Williams_Shannon_project-WIA/index.html
@@ -13,8 +13,8 @@
     <div id="homepage">
         <nav>
             <ul>
-                <li><a href="map.html" />Map</li>
-                <li><a href="breeds.html" />Breeds</li>
+                <li><a href="map.html" />Breeds by Location</li>
+                <li><a href="location.html" />Breeds by Popularity</li>
                 <li><a href="contact.html" />Contact</li>
             </ul>
         </nav>
